# humanoid-agi-plugin-system

./: .gitignore  AUDIT_ANCHOR_INTEGRATION.md  CI_READINESS.md  MIGRATION_GUIDE.md  OPERATIONS.md  PLUGIN_DEVELOPMENT.md  PRODUCTION_ACCEPTANCE_EVIDENCE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  RELEASE_NOTES.md  RISK_REGISTER.md  SCANNER_INTEGRATION.md  SECURITY_BOUNDARY.md  SPECIFICATION  SUPPLY_CHAIN.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
modules/plugin_system/: __init__.py  audit.py  compat.py  config.py  core.py  dependency.py  doctor.py  engine.py  event_bus.py  gateway.py  loader.py  market.py  marketplace.py  models.py  plugin_api.py  plugin_base.py  plugin_manager.py  plugin_sandbox.py  policy.py  release_gate.py  sandbox.py  sandbox_backend.py  sandbox_stdio_worker.py  sbom.py  scanner.py  signing.py  store_api.py
scripts/: collect_rc_evidence.py  create_scan_report_from_pip_audit.py  drill_common.py  drill_quarantine.py  drill_registry_verify.py  drill_revocation.py  drill_rollback.py  generate_audit_verify_evidence.py  release_gate.py  run_production_acceptance.py  validate_bwrap_sandbox.py
tests/: test_plugin_enterprise_readiness.py  test_plugin_legacy_api.py  test_plugin_legacy_core_compat.py  test_plugin_legacy_init_exports.py  test_plugin_legacy_market_store.py  test_plugin_legacy_plugin_manager_local.py  test_plugin_legacy_security_review.py  test_plugin_production_e2e.py  test_plugin_rc_evidence_tools.py  test_plugin_release_gate.py  test_plugin_system.py  test_utils.py
